-*- encoding: utf-8; indent-tabs-mode: nil -*-
Revision history for Perl extension Date::Convert::French_Rev.

0.10  ????

0.09  Primidi 1st Vendémiaire CCXXIX, jour du raisin, new year's day (Tuesday 22 September 2020)
        - fix a few typos in the feasts names (thank you Gérald)
        - add a few entries in the "SEE ALSO" chapter (thank you Gérald)
        - tidy up the documentation, for example replacing http:// by https:// whenever possible
        - start a deprecation process for the %L strftime specifier
        - check the scripts in the eg subdirectory

0.08  Tridi 23 Thermidor CCXXIII, jour de la lentille (Monday 2015-08-10,
      which, according to the Gregorian calendar, is the 223rd anniversary
      of the storming of the Tuileries palace)
        - fix prerequisite: Date::Convert 0.16 is fine, 0.14 is not.
          Actually, RT ticket 90470 was prematurely and erroneously declared
          as "fixed".
        - improve the documentation of method "change_to".
        - add more tests

0.07  Décadi 10 Thermidor CCXXIII, jour de l'arrosoir (Tuesday 2015-07-28, also
      the 221st anniversary of Robespierre's death)
        - fix prerequisite: Date::Convert 0.16 is fine, 0.14 is not (RT ticket 90470)
        - test file to check the parameter checks (mistakenly not included in 0.06)
        - a few documentation fixes
        - fix the mojibake bug (similar to RT ticket 100311 for DT::C::FR)
        - add an alternate API to convert from French Revolutionary to other calendar

0.06  Octidi 18 Brumaire CCXXII, jour de la dentelaire (Friday 2013-11-08, also
      the 214th anniversary of Bonaparte's coup agains the Directorate)
        - kwalitee issues: license, style, META.{yml,json}
        - use UTF-8 instead of ISO-8859-1, use spaces instead of tabs
        - more tests, more modern tests

0.05  Nonidi 9 Floréal CCXI, jour de la jacinthe (Monday 2003-04-28)
        - last version compatible with Date::Convert, next one will