@@ -1,6 +1,6 @@
 #
 #     Configuration script for Date::Convert::French_Rev
-#     Copyright © 2001, 2002, 2003, 2013, 2015, 2020 Jean Forget
+#     Copyright (c) 2001, 2002, 2003, 2013, 2015, 2020, 2021 Jean Forget
 #
 #     This program is distributed under the same terms as Perl 5.16.3:
 #     GNU Public License version 1 or later and Perl Artistic License
@@ -78,6 +78,9 @@ WriteMakefile(
                type => 'git',
                url  => 'https://github.com/jforget/Date-Convert-French_Rev.git',
                web  => 'https://github.com/jforget/Date-Convert-French_Rev',
+           },
+           bugtracker => {
+               web  => 'https://github.com/jforget/Date-Convert-French_Rev/issues',
            },
        },
     },
