@@ -78,7 +78,7 @@ French-speaker, ending in "fr.html") with the HTML browser.
 That's all!
 
 
-Copyright  (c) 2001-2003,  2013, 2015,  2020 Jean  Forget. All  rights
-reserved. This program  is free software. You  can distribute, modify,
-and otherwise mangle Date::Convert::French_Rev under the same terms as
-perl.
+Copyright  (c) 2001-2003,  2013,  2015, 2020,  2021  Jean Forget.  All
+rights reserved.  This program is  free software. You  can distribute,
+modify, and otherwise mangle  Date::Convert::French_Rev under the same
+terms as perl.
