@@ -2,7 +2,7 @@
 # -*- encoding: utf-8; indent-tabs-mode: nil -*-
 #
 #     Example of Date::Convert::French_Rev script to print a French Revolutionary calendar
-#     Copyright (C) 2001-2003, 2013, 2015, 2020 Jean Forget
+#     Copyright (C) 2001-2003, 2013, 2015, 2020, 2021 Jean Forget
 #
 #     See the license in the embedded documentation below.
 #
@@ -205,11 +205,11 @@ Jean Forget <JFORGET@cpan.org>
 
 =head1 LICENSE
 
-Copyright  (c) 2001,  2002, 2003,  2013, 2015,  2020 Jean  Forget. All
-rights reserved.  This program is  free software. You  can distribute,
-modify, and otherwise  mangle F<prt_cal> under the same  terms as Perl
-5.16.3:  GNU Public  License  version  1 or  later  and Perl  Artistic
-License
+Copyright (c)  2001, 2002, 2003,  2013, 2015, 2020, 2021  Jean Forget.
+All  rights  reserved.   This  program  is  free   software.  You  can
+distribute,  modify, and  otherwise mangle  F<prt_cal> under  the same
+terms as Perl  5.16.3: GNU Public License version 1  or later and Perl
+Artistic License
 
 You can  find the text  of the licenses  in the F<LICENSE> file  or at
 L<https://dev.perl.org/licenses/artistic.html>
